updated 'update profile' page

--- a/views/updateProfile.handlebars
+++ b/views/updateProfile.handlebars
@@ -4,40 +4,51 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6">
                 <div id="ui">
-                    <h1 class="text-center">REGISTRATION FORM</h1>
+                    <h1 class="text-center">UPDATE PROFILE</h1>
                     <br>
                     <form class="form-group text-center">
 ​
                         <div class="row">
                             <div class="col-lg-6">
-                                <label>First Name:</label>
-                                <input type="text" name="fname" class="form-control"
-                                    placeholder="Enter your first name..">
+                                <label>Location:</label>
+                                <input type="text" name="location" class="form-control"
+                                    placeholder="Enter your Location..">
                             </div>
                             <div class="col-lg-6">
-                                <label>Last Name:</label>
-                                <input type="text" name="lname" class="form-control"
-                                    placeholder="Enter your last name..">
+                                <label>Age:</label>
+                                <input type="text" name="age" class="form-control"
+                                    placeholder="Enter your Age..">
                             </div>
                         </div>
                         <br>
-                        <label>Username</label>
-                        <input type="email" name="email" class="form-control" placeholder="Enter your username..">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <label>Username</label>
+                                <input type="text" name="username" class="form-control" placeholder="Enter your username..">
+                            </div>
+
+                            <div class="col-lg-6">
+
+                            <label>Phone Number</label>
+                            <input type="text" name="phonebumber" class="form-control" placeholder="Enter your phone number..">
+                            </div>
+
+                        </div>
                         <br>
-                        <label>Email</label>
-                        <input type="email" name="email" class="form-control" placeholder="Enter your email..">
+                        <label>Bio:</label>
+                        <input type="text" name="bio" class="form-control" placeholder="Enter your Bio..">
 ​
                         <br>
                         <div class="row">
                             <div class="col-lg-6">
-                                <label>Password:</label>
-                                <input type="password" name="fname" class="form-control"
-                                    placeholder="Enter your password..">
+                                <label>Snapchat:</label>
+                                <input type="text" name="snapchat" class="form-control"
+                                    placeholder="Enter your snapchat..">
                             </div>
                             <div class="col-lg-6">
-                                <label>Re-type Password:</label>
-                                <input type="password" name="lname" class="form-control"
-                                    placeholder="Re-type password..">
+                                <label>Instagram:</label>
+                                <input type="text" name="instagram" class="form-control"
+                                    placeholder="Enter your Instagram...">
                             </div>
                             <br>
                             <!-- <div class="row">
@@ -56,8 +67,8 @@
                             </select> -->
                         <br>
 ​
-                        <label>Phone Number (optional)</label>
-                        <input type="tel" name="phone" class="form-control" placeholder="123-456-7890">
+                        <label>Activities:</label>
+                        <input type="text" name="activities" class="form-control" placeholder="Enter your activities...">
                         <br>
                         <br>
 ​
