organized and added id for updateprofile handlebars

--- a/views/updateProfile.handlebars
+++ b/views/updateProfile.handlebars
@@ -5,56 +5,47 @@
             <div class="col-lg-6">
                 <div id="ui">
                     <h1 class="text-center">UPDATE PROFILE</h1>
-                    <br>
                     <form class="form-group text-center">
+                        <label>Activities:</label>
+                            <input type="text" name="activities" id="activities" class="form-control" placeholder="Enter your activities...">
+                        <br>
+                        <label>Bio:</label>
+                            <input type="text" name="bio" id="bio" class="form-control" placeholder="Enter your Bio..">
 ​
                         <div class="row">
                             <div class="col-lg-6">
                                 <label>Location:</label>
-                                <input type="text" name="location" class="form-control"
-                                    placeholder="Enter your Location..">
+                                <input type="text" name="location" id="location" class="form-control"
+                                    placeholder="Enter your Zip code...">
                             </div>
                             <div class="col-lg-6">
                                 <label>Age:</label>
-                                <input type="text" name="age" class="form-control"
+                                <input type="text" name="age" id="age" class="form-control"
                                     placeholder="Enter your Age..">
                             </div>
                         </div>
                         <br>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <label>Username</label>
-                                <input type="text" name="username" class="form-control" placeholder="Enter your username..">
-                            </div>
-
-                            <div class="col-lg-6">
-
-                            <label>Phone Number</label>
-                            <input type="text" name="phonebumber" class="form-control" placeholder="Enter your phone number..">
+                        <div class="row">   
+                            <div class="col-lg-12">
+                                <label>Phone Number</label>
+                                <input type="text" name="phonenumber" id="phonenumber" class="form-control" placeholder="Enter your phone number..">
                             </div>
 
                         </div>
                         <br>
-                        <label>Bio:</label>
-                        <input type="text" name="bio" class="form-control" placeholder="Enter your Bio..">
-​
                         <br>
                         <div class="row">
                             <div class="col-lg-6">
                                 <label>Snapchat:</label>
-                                <input type="text" name="snapchat" class="form-control"
+                                <input type="text" name="snapchat" id="snapchat" class="form-control"
                                     placeholder="Enter your snapchat..">
                             </div>
                             <div class="col-lg-6">
                                 <label>Instagram:</label>
-                                <input type="text" name="instagram" class="form-control"
+                                <input type="text" name="instagram" id="instagram" class="form-control"
                                     placeholder="Enter your Instagram...">
                             </div>
                             <br>
-                            <!-- <div class="row">
-                                    <label>Phone number (optional):</label>
-                                    <input type="password" name="lname" class="form-control" placeholder="Re-type password..">
-                                </div> -->
                             <br>
                         </div>
 ​
@@ -65,11 +56,7 @@
                                 <option>Female</option>
                                 <option>Other</option>
                             </select> -->
-                        <br>
-​
-                        <label>Activities:</label>
-                        <input type="text" name="activities" class="form-control" placeholder="Enter your activities...">
-                        <br>
+                        
                         <br>
 ​
                         <input type="submit" name="submit" value="submit"
