added find matches by zip codes within 5 mile radius as well as allowed images to display on all pages

--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -69,7 +69,7 @@
                             </div>
                         </div>
 
-                        <a href="/matches">
+                        <a href="/matches/{{profile.location}}">
                         
                   <input type="submit" name="findmatch" value="Find a MuscleMate!" class="btn btn-primary btn-inline btn-lg mb-4"></input>
                 </a>
