--- a/views/matches.handlebars
+++ b/views/matches.handlebars
@@ -16,7 +16,7 @@
 <div class="m-2 card">
     <img src="{{profile_img_url}}" class="card-img-top" alt="...">
     <div class="card-body">
-      <h2 class="card-title"><a href="/matches/{{id}}">{{user.firstname}} {{user.lastname}}</a></h2>
+      <h2 class="card-title"><a href="/match/{{id}}">{{user.firstname}} {{user.lastname}}</a></h2>
       {{!-- <p class="card-text1">{{user.username}}</p> --}}
       <p class="card-text">{{activities}}</p>
     </div>
