cleaned nav bar and commented out uneeded code

--- a/views/icebreak.handlebars
+++ b/views/icebreak.handlebars
@@ -27,7 +27,7 @@
     {{!-- <img src="/BackofGym-1380x600.jpeg" alt="gym"> --}}
 
     <section class="container">
-        <div>
+        <div id="icebreak-info">
             <h1>
                 PUMP IT!
                 </h1>
@@ -42,7 +42,7 @@
 </section>
 
 
-
+<br>
 
 <div class="tile is-ancestor">
     <div class="tile is-parent">
