--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,9 +172,13 @@ max-width: 100%;
 #container-icebreak {
   position: relative;
   max-width: 100%;
+  height: 180px;
   opacity: 90%;
   background-color: white;
- 
+  border-radius: 20px;
+}
+#icebreak-info {
+  text-align: center;
 }
 
 /* Bottom right text */
