--- a/views/clickedMatch.handlebars
+++ b/views/clickedMatch.handlebars
@@ -1,25 +1,3 @@
-{{!-- <p>
-    <h1>
-    {{user.firstname}} {{user.lastname}}
-    </h1>
-    <br>
-   Bio: {{bio}}
-    <br>
-   Location: {{location}}
-    <br>
-   Activities: {{activities}}
-    <br>
-   Snapchat: {{snapchat}}
-    <br>
-    Instagram: {{instagram}}
-    <br>
-    Age: {{age}}
-    <br>
-    Phone Number: {{phonenumber}}
-
-</p> --}}
-
-
 <body class="bg-dark">
     <div class="container">
         <div class="row d-flex justify-content-center">
@@ -28,11 +6,12 @@
                     <div class="col-sm-4 bg-info rounded-left">
                         <div class="card-block text-center text-white">
                             {{!-- below is routing to http://localhost:3001/matches/images/image_12.jpg --}}
+                            <br>
                         <img src="{{profile_img_url}}" class="card-img-top" alt="...">
                             {{!-- <i class="fas fa-user-tie fa-7x mt-5"></i> --}}
                             <h2 class="font-weight-bold mt-4">{{user.username}}</h2>
                             <p>{{bio}}</p>
-                            <i class="far fa-edit fa-2x mb-4"></i>
+                            {{!-- <i class="far fa-edit fa-2x mb-4"></i> --}}
                         </div>
                     </div>
                     <div class="col-sm-8 bg-white rounded-right">
@@ -71,4 +50,17 @@
                                 <p class="font-weight-bold">Known-Location:</p>
                                 <h6 class="text-muted">{{location}}</h6>
                             </div>
+                        </div>
+
+                        <ul class="list-unstyled d-flex justify-content-center mt-4">
+                            <li><a href="#"><i class="fab fa-instagram px-3 h4 text-info"></i>{{instagram}}</a></li>
+                            <li><a href="#"><i class="fab fa-snapchat px-3 h4 text-info"></i></a>{{snapchat}}</li>
+                        </ul>
+                        <div class="d-flex justify-content-center">
+                            <a href="/matches/{{location}}">
+                                <input type="submit" name="findmatch" value="Back to Matches" class="btn btn-primary btn-inline btn-lg mb-4"></input>
+                            </a>
+                            <a href="/icebreak">
+                                <input type="submit" name="findmatch" value="Break the Ice!" class="btn btn-primary btn-inline btn-lg mb-4"></input>
+                            </a>
                         </div>
