put route works now :)

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -111,5 +111,6 @@
       crossorigin="anonymous"></script>
     {{!-- script end --}}
   </body>
-<script src="./js/logout.js"></script>
+<script src="/js/logout.js"></script>
+<script src="/js/profile.js"></script>
 </html>
