--- a/views/updateProfile.handlebars
+++ b/views/updateProfile.handlebars
@@ -1,10 +1,11 @@
 <body>
+
     <div class="container">
         <div class="row">
             <div class="col-lg-3"></div>
             <div class="col-lg-6">
                 <div id="ui">
-                    <h1 class="text-center">UPDATE PROFILE</h1>
+                    <h1 class="text-center">UPDATE PROFILE {{user_id}}</h1>
                     <form class="form-group text-center">
                         <label>Activities:</label>
                             <input type="text" name="activities" id="activities" class="form-control" placeholder="Enter your activities...">
@@ -58,9 +59,11 @@
                             </select> -->
                         
                         <br>
-​
-                        <input type="submit" name="submit" value="submit"
-                            class="btn btn-primary btn-block btn-lg"></input>
+​                         
+                        <button 
+                            class="btn btn-primary btn-block btn-lg" id="updateprofilebutton" data-id="{{user_id}}">
+
+                        </button>
 ​
                     </form>
                 </div>
