removed excess code

--- a/views/updateProfile.handlebars
+++ b/views/updateProfile.handlebars
@@ -1,11 +1,10 @@
 <body>
-
     <div class="container">
         <div class="row">
             <div class="col-lg-3"></div>
             <div class="col-lg-6">
                 <div id="ui">
-                    <h1 class="text-center">UPDATE PROFILE {{user_id}}</h1>
+                    <h1 class="text-center">UPDATE PROFILE</h1>
                     <form class="form-group text-center">
                         <label>Activities:</label>
                             <input type="text" name="activities" id="activities" class="form-control" placeholder="Enter your activities...">
@@ -34,7 +33,6 @@
 
                         </div>
                         <br>
-                        <br>
                         <div class="row">
                             <div class="col-lg-6">
                                 <label>Snapchat:</label>
@@ -56,19 +54,14 @@
                                 <option>Female</option>
                                 <option>Other</option>
                             </select> -->
-                        <br>
-
-​                         
+                        <br> 
+                        <br>       
                         <button 
-                            class="btn btn-primary btn-block btn-lg" id="updateprofilebutton" data-id="{{user_id}}">
-
+                            class="btn btn-primary btn-block btn-lg" id="updateprofilebutton" data-id="{{user_id}}">Update Profile
                         </button>
-
-​
                     </form>
                 </div>
             </div>
-            <div class="col-lg-3"></div>
         </div>
     </div>
 ​
