--- a/views/clickedMatch.handlebars
+++ b/views/clickedMatch.handlebars
@@ -8,16 +8,13 @@
                             {{!-- below is routing to http://localhost:3001/matches/images/image_12.jpg --}}
                             <br>
                         <img src="{{profile_img_url}}" class="card-img-top" alt="...">
-                            {{!-- <i class="fas fa-user-tie fa-7x mt-5"></i> --}}
                             <h2 class="font-weight-bold mt-4">{{user.username}}</h2>
                             <p>{{bio}}</p>
-                            {{!-- <i class="far fa-edit fa-2x mb-4"></i> --}}
                         </div>
                     </div>
                     <div class="col-sm-8 bg-white rounded-right">
                         <h3 class="mt-3 text-center">My Activities</h3>
                         <hr class="bg-primary">
-                        <!-- <hr class="badge-primary mt-0 w-25"> -->
                         <div class="row">
                             <div class="col-sm-6">
                                 <p class="font-weight-bold">Recent:</p>
@@ -47,7 +44,7 @@
                                 <h6 class="text-muted">{{phonenumber}}</h6>
                             </div>
                             <div class="col-sm-6">
-                                <p class="font-weight-bold">Known-Location:</p>
+                                <p class="font-weight-bold">Zip Code:</p>
                                 <h6 class="text-muted">{{location}}</h6>
                             </div>
                         </div>
